# opus

./: .gitignore  LICENSE  README.md  opus.cabal
src/Codec/Audio/Opus/: Decoder.hs  Encoder.hs  Types.hs
src/Codec/Audio/Opus/Decoder/: Conduit.hs
src/Codec/Audio/Opus/Encoder/: Conduit.hs
src/Codec/Audio/Opus/Internal/: Opus.hsc
test/: Spec.hs
