name:                opus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alios/opus#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Barenhoff
maintainer:          mbarenh@alios.org
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:
    README.md


library
  hs-source-dirs:      src
  exposed-modules:     Codec.Audio.Opus.Encoder,
                       Codec.Audio.Opus.Types,
                       Codec.Audio.Opus.Internal.Opus
  default-language:    Haskell2010
  build-tools:         hsc2hs
  pkgconfig-depends:   opus
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5,
                       exceptions,
                       hspec

source-repository head
  type:     git
  location: https://github.com/alios/opus

test-suite hs-mumble-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language:    Haskell2010
  other-modules:
      Paths_opus
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       opus,
                       hspec
